--- a/templates/index.html
+++ b/templates/index.html
@@ -103,7 +103,7 @@
               </tr>
               <tr>
                 <th scope="row">3</th>
-                <td>Larry</td>
+                <td>Lary</td>
                 <td>the Bird</td>
                 <td>@twitter</td>
               </tr>
